# RebootReminder

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.bat  build.rs  config.example.json  config.example.xml  config.sample.json
.github/workflows/: release.yml
docs/: CONFIGURATION.md  INSTALLATION.md
resources/: app.manifest  windows.rc
scripts/: build_msi.ps1  cleanup-releases.ps1  create-release.ps1  install.ps1  uninstall.ps1
src/: main.rs
src/config/: mod.rs  models.rs
src/database/: mod.rs  models.rs
src/impersonation/: mod.rs  mod.rs.new
src/logging/: mod.rs
src/notification/: mod.rs  toast.rs  toast.rs.new  tray.rs  tray.rs.new
src/reboot/: detector.rs  history.rs  history.rs.new  mod.rs  system.rs
src/service/: mod.rs
src/utils/: mod.rs  registry.rs  timespan.rs
src/watchdog/: mod.rs  power_events.rs
tests/: integration_tests.rs  windows_api_tests.rs
wix/: main.wxs
