[package]
name = "reboot_reminder"
version = "2025.4.13-1121"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A cross-platform reboot reminder system that runs as a Windows service"
readme = "README.md"
license = "MIT"
repository = "https://github.com/freedbygrace/RebootReminder"

[dependencies]
# Windows API integration
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_System_Wmi",
    "Win32_System_Com",
    "Win32_System_Rpc",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_RemoteDesktop",
    "Win32_System_StationsAndDesktops",
    "Win32_System_EventLog",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Time",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Authorization_UI",
    "Win32_System_Environment",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Power",
    "Win32_System_Shutdown",
    "Win32_System_Console"
] }
windows-service = "0.6.0"
wmi = "0.13.1"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
quick-xml = { version = "0.30.0", features = ["serialize"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
config = "0.13.3"

# Database
rusqlite = { version = "0.29.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"

# Notifications
systray = { git = "https://github.com/qdot/systray-rs", branch = "master" }
winrt-notification = "0.5.1"

# Logging
log = "0.4.20"
log4rs = "1.2.0"
chrono = "0.4.31"

# Utilities
thiserror = "1.0.50"
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
once_cell = "1.18.0"

# Testing
[dev-dependencies]
mockall = "0.11.4"
test-case = "3.2.1"
tempfile = "3.8.1"

[build-dependencies]
embed-resource = "2.4.0"
winres = "0.1"

[package.metadata.wix]
upgrade-guid = "A4F75EB2-1949-4749-86D4-2D9C1EAAE1D4"
path-guid = "F7F8C456-8A3D-4873-B0CF-E5E4F12E5DBD"
license = false
eula = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

